--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,12 @@
 html {
-  background-color: lavenderblush;
+  background-color: fff;
+}
+
+a {
+  background-image: none;
+}
+
+p,
+img {
+  margin-bottom: 0.45rem;
 }
