Add media queries for project cards

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,10 +19,6 @@ img {
 input[type="email"],
 input[type="text"],
 textarea {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
   background: #f7f7f7;
   border-radius: 0.35em;
   border: 2px solid transparent;
@@ -40,6 +36,10 @@ textarea {
 input[type="email"],
 input[type="text"] {
   height: 2.75em;
+}
+
+textarea {
+  margin-bottom: 1rem;
 }
 
 input[type="email"]:focus,
